tests/compile-fail/dangling_pointers/dangling_pointer_addr_of.stderr
error: Undefined Behavior: pointer to alloc515 was dereferenced after this allocation got freed
  --> $DIR/dangling_pointer_addr_of.rs:10:22
   |
LL |     let x = unsafe { ptr::addr_of!(*p) }; //~ ERROR dereferenced after this allocation got freed
   |                      ^^^^^^^^^^^^^^^^^ pointer to alloc515 was dereferenced after this allocation got freed
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at rustc_src/src/ptr/mod.rs:1482:5
   = note: this error originates in the macro `ptr::addr_of` (in Nightly builds, run with -Z macro-backtrace for more info)

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

